--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.1'
-
 services:
   zookeeper:
     image: docker.io/bitnami/zookeeper:3.8
@@ -19,6 +17,11 @@ services:
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
+    healthcheck:
+      test: "/opt/bitnami/kafka/bin/kafka-topics.sh --bootstrap-server localhost:9092 --list"
+      interval: 10s
+      timeout: 30s
+      retries: 5
     depends_on:
       - zookeeper
 
@@ -30,8 +33,8 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - kafka
-      - zookeeper
+      kafka:
+        condition: service_healthy
 
 volumes:
   zookeeper_data:
